# FreeCAD

./: .gitmodules  BUILD.md  CHANGELOG_PATCH.md  CHAT_SUMMARY_2026-04-17.md  CMakeLists.txt  CMakePresets.json  DEVELOPMENT_SESSION_LOG.md  FREECAD_1.0_MAJOR_ISSUES.md  FREECAD_FULL_PARITY_MATRIX.md  FREECAD_REACT_RUST_VARIANT_PLAN.md  LARGE_MODEL_OPTIMIZATION.md  MODERNIZATION_PLAN.md  Set-FreeCADEnv.ps1  Start-FreeCADShell.ps1  _build.bat  _build.ps1  _build2.bat  _compile_test.bat  _d.py  _d2.py  _d3.py  _d4.py  _d5.py  _d6.py  _run2.bat  _run3.bat  _run4.bat  _run5.bat  _run_diag.bat  build.bat  pixi.toml  run_freecad.bat  test.20260415-115420.FCBak  test.FCStd  test2.20260415-115420.FCBak  test2.FCStd
src/Mod/ElectricalHarness/: CMakeLists.txt  Init.py  InitGui.py
src/Mod/ElectricalHarness/App/: __init__.py  document_objects.py  entities.py  flattening.py  ids.py  import_export.py  integration_dolibarr.py  integration_route_core.py  library.py  model.py  project_store.py  reports.py  routing.py  serialization.py  services.py  validation.py
src/Mod/ElectricalHarness/Commands/: __init__.py  command_registry.py  object_factory.py
src/Mod/ElectricalHarness/Gui/: __init__.py  editor2d.py  panels.py  routing3d_tools.py  selection_bridge.py  workbench.py
src/Mod/ElectricalHarness/Tests/: TestElectricalHarness.py  __init__.py  test_flattening.py  test_integration_dolibarr.py  test_integration_route_core.py  test_library.py  test_model.py  test_phase2.py  test_project_store.py  test_reports.py  test_reports_extended.py  test_serialization.py  test_validation.py  test_validation_extended.py
src/Mod/ElectricalHarness/docs/: ARCHITECTURE.md  BACKLOG.md  COMPETITIVE_SPECIFICATION.md
src/Mod/ElectricalHarness/electrical_harness/: __init__.py
src/Mod/ElectricalHarness/examples/: sample_project.ehproj.json
src/Mod/FlowStudio/: CMakeLists.txt  Init.py  InitGui.py
src/Mod/FlowStudio/docs/: ARCHITECTURE.md  CST_STUDIO_SUITE_LAYOUT_DEEPSEARCH.md  ELECTRONICS_COOLING_WORKFLOW_PLAN.md  FLOW_STUDIO_ENTERPRISE_DEEPSEARCH_SPEC.md  OPTICAL_SOLVER_DEEPSEARCH.md  SIMFLOW_TUTORIAL_COVERAGE_PLAN.md  SOLVER_REPOSITORIES.md  TUTORIAL_ZERO_TO_POSTPROCESSING.md  TUTORIAL_ZERO_TO_POSTPROCESSING.typ
src/Mod/FlowStudio/flow_studio/: ObjectsFlowStudio.py  __init__.py  commands.py  engineering_database.py  engineering_database_editor.py  enterprise_commands.py  geometry_tools.py  physics_domains.py  runtime_monitor.py  solver_artifacts.py  solver_deps.py  solver_installer.py  workflow_guide.py
src/Mod/FlowStudio/flow_studio/api/: __init__.py  factories.py
src/Mod/FlowStudio/flow_studio/app/: __init__.py  bc_inlet_service.py  bc_open_service.py  bc_outlet_service.py  bc_wall_service.py  flowefd_features_service.py  fluid_material_service.py  geant4_result_service.py  generic_bc_service.py  geometry_tools_service.py  initial_conditions_service.py  material_service.py  measurement_point_service.py  measurement_surface_service.py  measurement_volume_service.py  mesh_gmsh_service.py  physics_model_service.py  post_pipeline_service.py  project_cockpit_service.py  solver_service.py
src/Mod/FlowStudio/flow_studio/catalog/: __init__.py  database.py  editor.py  optics.py
src/Mod/FlowStudio/flow_studio/core/: __init__.py  domains.py  workflow.py
src/Mod/FlowStudio/flow_studio/enterprise/: __init__.py  bootstrap.py
src/Mod/FlowStudio/flow_studio/feminout/: __init__.py  importFlowStudio.py
src/Mod/FlowStudio/flow_studio/objects/: __init__.py  analysis.py  base_bc.py  base_object.py  bc_electromagnetic.py  bc_electrostatic.py  bc_geant4.py  bc_inlet.py  bc_open_boundary.py  bc_optical.py  bc_outlet.py  bc_structural.py  bc_symmetry.py  bc_thermal.py  bc_wall.py  boundary_layer.py  electromagnetic_material.py  electromagnetic_physics_model.py  electrostatic_material.py  electrostatic_physics_model.py  flowefd_features.py  fluid_material.py  geant4_result.py  geant4_result_components.py  initial_conditions.py  measurement_point.py  measurement_surface.py  measurement_volume.py  mesh_gmsh.py  mesh_region.py  optical_material.py  optical_physics_model.py  physics_model.py  post_pipeline.py  solid_material.py  solver.py  structural_physics_model.py  thermal_material.py  thermal_physics_model.py
src/Mod/FlowStudio/flow_studio/runtime/: __init__.py  artifacts.py  dependencies.py  installer.py  monitor.py
src/Mod/FlowStudio/flow_studio/solvers/: __init__.py  base_solver.py  elmer_runner.py  elmer_sif.py  fluidx3d_runner.py  geant4_runner.py  geant4_support.py  openfoam_runner.py  optical_runner.py  registry.py
src/Mod/FlowStudio/flow_studio/taskpanels/: __init__.py  base_taskpanel.py  geometry_tools_desktop_adapter.py  project_cockpit_desktop_actions.py  selection_desktop_adapter.py  task_bc_inlet.py  task_bc_open.py  task_bc_outlet.py  (+18 more)
src/Mod/SheetMetal/: CMakeLists.txt  Init.py  InitGui.py
src/Mod/SheetMetal/App/: AppSheetMetal.cpp  CMakeLists.txt  SheetMetalBend.cpp  SheetMetalBend.h
src/Mod/SheetMetal/Gui/: AppSheetMetalGui.cpp  CMakeLists.txt  CommandSheetMetal.cpp  CommandSheetMetal.h
tests/benchmarks/: AssemblyBenchmarks.cpp  CMakeLists.txt  ExportBenchmarks.cpp  RecomputeBenchmarks.cpp
variants/asterforge/: .gitignore  Cargo.toml  README.md  build.bat  build.ps1
variants/asterforge/backend/fixtures/: sample-ap242-assembly.stp
variants/asterforge/docs/: ASTERFORGE_ARCHITECTURE_SPEC.md  FREECAD_LAYOUT_TRANSPLANT_PLAN.md
variants/asterforge/docs/adr/: 0001-shell-and-transport.md
variants/asterforge/frontend/app/: index.html  package-lock.json  package.json  vite.config.ts
variants/asterforge/native/freecad-bridge/: Cargo.toml
variants/asterforge/protocol/: README.md  SHELL_PROTOCOL_EXPANSION_DRAFT.md
variants/asterforge/protocol/proto/: asterforge.proto
variants/asterforge/protocol/schemas/: command.schema.json  document.schema.json  menu-bar.schema.json  object-tree.schema.json  property-groups.schema.json  property.schema.json  selection.schema.json  shell-layout.schema.json  shell-snapshot.schema.json  toolbar-band.schema.json  workbench-catalog.schema.json
(+661 files in other folders)
