[package]
name = "asterforge-api-gateway"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-or-later"
publish = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
asterforge-freecad-bridge = { path = "../../../native/freecad-bridge" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
